--- a/Week_01/本周任务完成情况.md
+++ b/Week_01/本周任务完成情况.md
@@ -19,7 +19,7 @@
 
 * 实战题目
   * ✅柱状图中最大的矩形（亚马逊、微软、字节跳动在半年内面试中考过）
-  * ❌滑动窗口最大值（亚马逊在半年内面试常考）
+  * ✅滑动窗口最大值（亚马逊在半年内面试常考）
 
 * 课后作业
   * ❌设计循环双端队列（Facebook 在 1 年内面试中考过）
