--- a/Week_01/本周任务完成情况.md
+++ b/Week_01/本周任务完成情况.md
@@ -27,7 +27,7 @@
 
 * 本周作业
   * 简单：
-    * ❌删除排序数组中的重复项（Facebook、字节跳动、微软在半年内面试中考过）
+    * ✅删除排序数组中的重复项（Facebook、字节跳动、微软在半年内面试中考过）
     * ❌旋转数组（微软、亚马逊、PayPal 在半年内面试中考过）
     * ✅合并两个有序链表（亚马逊、字节跳动在半年内面试常考）
     * ❌合并两个有序数组（Facebook 在半年内面试常考）
