--- a/Week_01/本周任务完成情况.md
+++ b/Week_01/本周任务完成情况.md
@@ -37,7 +37,7 @@
   * 中等：
     * ❌ 设计循环双端队列（Facebook 在 1 年内面试中考过）
   * 困难：
-    ❌ 接雨水（亚马逊、字节跳动、高盛集团、Facebook 在半年内面试常考）
+    * ❌ 接雨水（亚马逊、字节跳动、高盛集团、Facebook 在半年内面试常考）
 
 * 下周预习
   * 预习题目：
