--- a/Week_01/本周任务完成情况.md
+++ b/Week_01/本周任务完成情况.md
@@ -23,7 +23,7 @@
 
 * 课后作业
   * ❌ 设计循环双端队列（Facebook 在 1 年内面试中考过）
-  * ❌ 接雨水（亚马逊、字节跳动、高盛集团、Facebook 在半年内面试常考）
+  * ✅ 接雨水（亚马逊、字节跳动、高盛集团、Facebook 在半年内面试常考）
 
 * 本周作业
   * 简单：
@@ -37,10 +37,10 @@
   * 中等：
     * ❌ 设计循环双端队列（Facebook 在 1 年内面试中考过）
   * 困难：
-    * ❌ 接雨水（亚马逊、字节跳动、高盛集团、Facebook 在半年内面试常考）
+    *  ✅ 接雨水（亚马逊、字节跳动、高盛集团、Facebook 在半年内面试常考）
 
 * 下周预习
   * 预习题目：
-    * ❌ 有效的字母异位词
-    * ❌ 二叉树的中序遍历
-    * ❌ 最小的 k 个数
+    *  ✅ 有效的字母异位词
+    *  ✅ 二叉树的中序遍历
+    *  ✅ 最小的 k 个数
